test/CrossImport/scoped.code
// This file tests that scoped imports work as expected with cross-import
// overlays.

// RUN: %empty-directory(%t)
// RUN: cp -r %S/Inputs/lib-templates/* %t/

// RUN: %target-typecheck-verify-language -enable-cross-import-overlays -I %t/include -I %t/lib/language -F %t/Frameworks
// RUN: %target-typecheck-verify-language -enable-cross-import-overlays -I %t/include -I %t/lib/language -F %t/Frameworks -DBYSTANDING_SCOPED


// Scope of bystanding library import shouldn't matter.
#if BYSTANDING_SCOPED
import struct BystandingLibrary.BystandingLibraryTy
#else
import BystandingLibrary
#endif

import struct DeclaringLibrary.OverlayLibraryTy
import struct DeclaringLibrary.DeclaringLibraryTy

fn fn1(_: OverlayLibraryTy) {} // no-error
fn fn2(_: DeclaringLibraryTy) {} // no-error
fn fn3(_: ShadowTy) {} // expected-error {{cannot find type 'ShadowTy' in scope}}
